// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CLI basic commands can create conn aliases 1`] = `
"alias  conn                                     
alias1 mysql://app:secret@127.0.0.1:1234/dbname 
alias2 sqlite3:///path/to/file.db               

"
`;

exports[`CLI basic commands can delete conn aliases 1`] = `
"alias  conn                       
alias2 sqlite3:///path/to/file.db 

"
`;

exports[`CLI basic commands can diff schemas 1`] = `
"Diff of database schemas:

No tables changes

"
`;

exports[`CLI basic commands can diff tables 1`] = `
"Diff of tables schema

column  type                     
field_1 integer nullable → float 

4x similar, 1x changed

Diff of tables content (first 100 rows)

id field_1    updated_at                                
1  12 → 12.3  [null] → 2020-07-24 18:34:00              
2  30 → 30.45 2020-07-24 18:34:00 → 2020-07-24 19:25:00 

"
`;

exports[`CLI basic commands can list tables 1`] = `
"table   rows bytes 
table_1            
table_2 null       
table_3            

(0 B in 3 tables)
"
`;

exports[`CLI basic commands can show table 1`] = `
"column     type     nullable 
id         integer  false    
field_1    float    false    
field_2    text     true     
created_at datetime true     
updated_at datetime true     

"
`;

exports[`CLI basic commands can use a created alias 1`] = `
"table   rows bytes 
table_1            
table_2 null       
table_3            

(0 B in 3 tables)
"
`;
